--- a/Templates/Templates.csproj
+++ b/Templates/Templates.csproj
@@ -81,9 +81,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="AngularJS Module1.js" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\app.js" />
+    <Content Include="Scripts\controller.js" />
+    <Content Include="Scripts\directive.js" />
+    <Content Include="Scripts\factory.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
