--- a/Templates/Templates.csproj
+++ b/Templates/Templates.csproj
@@ -86,6 +86,8 @@
     <Content Include="Scripts\controller.js" />
     <Content Include="Scripts\directive.js" />
     <Content Include="Scripts\factory.js" />
+    <Content Include="Scripts\repository.js" />
+    <Content Include="Scripts\service.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
